Fixed new entity errors